unpackaged/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>(depreciated)  we use the acctg seed project object for installation tracking</description>
    <label>Project (depreciated)</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects (depreciated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>