unpackaged/main/default/objects/Project__c/fields/Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received__c</fullName>
    <label>Contract Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting</fullName>
                <default>true</default>
                <label>Waiting</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>