unpackaged/main/default/objects/Project__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due Date</description>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>