unpackaged/main/default/objects/Project__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Priority 1</fullName>
            </value>
            <value>
                <fullName>Priority 2</fullName>
            </value>
            <value>
                <fullName>Priority 3</fullName>
            </value>
            <value>
                <fullName>Priority 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>