unpackaged/main/default/objects/Project__c/fields/Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact__c</fullName>
    <label>Sales Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Richie Bell</fullName>
            </value>
            <value>
                <fullName>Ray Wagnon</fullName>
            </value>
            <value>
                <fullName>Steve Yeisley</fullName>
            </value>
            <value>
                <fullName>Scott Flynn</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>