unpackaged/main/default/objects/Project__c/fields/Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact__c</fullName>
    <label>Technical Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>